--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <div class="wrap">
         <div id="header_wrap" class="outer">
-            <img src="assets/jsystem-logo-04.png">
+            <a href="{{ site.url }}"><img src="../assets/jsystem-logo-04.png"></a>
             <!-- <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a> -->
             <ul class="nav navbar-nav navbar-inverse navbar-right">
                 {% for page in site.pages %} {% if page.title and page.layout != "sidebar" %}
